<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RecommendFoodActivity">

    <TextView
        android:id="@+id/tvHelloUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="Hello User!"
        android:textColor="#8DAB7F"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPickYourFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/pick_your_food"
        android:textColor="#8DAB7F"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tvHelloUser"
        app:layout_constraintTop_toBottomOf="@+id/tvHelloUser" />

    <ImageView
        android:id="@+id/ivProfile"
        android:layout_width="46dp"
        android:layout_height="50dp"
        android:layout_marginStart="124dp"
        android:contentDescription="@string/profile"
        app:layout_constraintBottom_toBottomOf="@+id/tvPickYourFood"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvPickYourFood"
        app:layout_constraintTop_toTopOf="@+id/tvHelloUser"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/group" />

    <TextView
        android:id="@+id/tvBMINotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/your_bmi_is_normal_you_can_eat_what_you_wish"
        android:textColor="#BFBFBF"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/tvPickYourFood"
        app:layout_constraintTop_toBottomOf="@+id/tvPickYourFood" />

    <TextView
        android:id="@+id/tvMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/menu"
        android:textColor="#8DAB7F"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tvBMINotes"
        app:layout_constraintTop_toBottomOf="@+id/tvBMINotes" />

    <TextView
        android:id="@+id/tvBreakfast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/breakfast"
        android:textColor="#8DAB7F"
        app:layout_constraintStart_toStartOf="@+id/tvMenu"
        app:layout_constraintTop_toBottomOf="@+id/tvMenu" />

    <FrameLayout
        android:id="@+id/container_breakfast"
        android:layout_width="360dp"
        android:layout_height="154dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvBreakfast"
        app:layout_constraintTop_toBottomOf="@id/tvBreakfast" />

    <TextView
        android:id="@+id/tvLunch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="Lunch"
        android:textColor="#8DAB7F"
        app:layout_constraintStart_toStartOf="@+id/container_breakfast"
        app:layout_constraintTop_toBottomOf="@+id/container_breakfast" />

    <FrameLayout
        android:id="@+id/container_lunch"
        android:layout_width="360dp"
        android:layout_height="154dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvLunch"
        app:layout_constraintTop_toBottomOf="@id/tvLunch" />

    <TextView
        android:id="@+id/tvDinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="Dinner"
        android:textColor="#8DAB7F"
        app:layout_constraintStart_toStartOf="@+id/container_lunch"
        app:layout_constraintTop_toBottomOf="@+id/container_lunch" />

    <FrameLayout
        android:id="@+id/container_dinner"
        android:layout_width="360dp"
        android:layout_height="154dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvDinner"
        app:layout_constraintTop_toBottomOf="@id/tvDinner" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/menubar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>